// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ins renders with accessKey="a,b,c,d" 1`] = `
<ins
  accessKey="a,b,c,d"
/>
`;

exports[`ins renders with autoCapitalize="characters" 1`] = `
<ins
  autoCapitalize="characters"
/>
`;

exports[`ins renders with autoCapitalize="none" 1`] = `
<ins
  autoCapitalize="none"
/>
`;

exports[`ins renders with autoCapitalize="off" 1`] = `
<ins
  autoCapitalize="off"
/>
`;

exports[`ins renders with autoCapitalize="on" 1`] = `
<ins
  autoCapitalize="on"
/>
`;

exports[`ins renders with autoCapitalize="sentences" 1`] = `
<ins
  autoCapitalize="sentences"
/>
`;

exports[`ins renders with autoCapitalize="words" 1`] = `
<ins
  autoCapitalize="words"
/>
`;

exports[`ins renders with children 1`] = `
<ins>
  TEST
</ins>
`;

exports[`ins renders with cite="https://google.com/" 1`] = `
<ins
  cite="https://google.com/"
/>
`;

exports[`ins renders with className="foo bar baz" 1`] = `
<ins
  className="foo bar baz"
/>
`;

exports[`ins renders with contentEditable="false" 1`] = `
<ins
  contentEditable="false"
/>
`;

exports[`ins renders with contentEditable="true" 1`] = `
<ins
  contentEditable="true"
/>
`;

exports[`ins renders with dateTime="12:00" 1`] = `
<ins
  dateTime="12:00"
/>
`;

exports[`ins renders with dir="auto" 1`] = `
<ins
  dir="auto"
/>
`;

exports[`ins renders with dir="ltr" 1`] = `
<ins
  dir="ltr"
/>
`;

exports[`ins renders with dir="rtl" 1`] = `
<ins
  dir="rtl"
/>
`;

exports[`ins renders with draggable="false" 1`] = `
<ins
  draggable="false"
/>
`;

exports[`ins renders with draggable="true" 1`] = `
<ins
  draggable="true"
/>
`;

exports[`ins renders with empty attributes 1`] = `<ins />`;

exports[`ins renders with hidden="false" 1`] = `
<ins
  hidden={false}
/>
`;

exports[`ins renders with hidden="true" 1`] = `
<ins
  hidden={true}
/>
`;

exports[`ins renders with id="TEST" 1`] = `
<ins
  id="TEST"
/>
`;

exports[`ins renders with inputMode="decimal" 1`] = `
<ins
  inputMode="decimal"
/>
`;

exports[`ins renders with inputMode="email" 1`] = `
<ins
  inputMode="email"
/>
`;

exports[`ins renders with inputMode="none" 1`] = `
<ins
  inputMode="none"
/>
`;

exports[`ins renders with inputMode="numeric" 1`] = `
<ins
  inputMode="numeric"
/>
`;

exports[`ins renders with inputMode="search" 1`] = `
<ins
  inputMode="search"
/>
`;

exports[`ins renders with inputMode="tel" 1`] = `
<ins
  inputMode="tel"
/>
`;

exports[`ins renders with inputMode="text" 1`] = `
<ins
  inputMode="text"
/>
`;

exports[`ins renders with inputMode="url" 1`] = `
<ins
  inputMode="url"
/>
`;

exports[`ins renders with is="foo" 1`] = `
<ins
  is="foo"
/>
`;

exports[`ins renders with itemID="https://google.com/" 1`] = `
<ins
  itemID="https://google.com/"
/>
`;

exports[`ins renders with itemProp="https://google.com/" 1`] = `
<ins
  itemProp="https://google.com/"
/>
`;

exports[`ins renders with itemRef="foo bar" 1`] = `
<ins
  itemRef="foo bar"
/>
`;

exports[`ins renders with itemScope="false" 1`] = `
<ins
  itemScope={false}
/>
`;

exports[`ins renders with itemScope="true" 1`] = `
<ins
  itemScope={true}
/>
`;

exports[`ins renders with itemType="https://google.com/" 1`] = `
<ins
  itemType="https://google.com/"
/>
`;

exports[`ins renders with lang="" 1`] = `
<ins
  lang=""
/>
`;

exports[`ins renders with lang="es-419" 1`] = `
<ins
  lang="es-419"
/>
`;

exports[`ins renders with slot="TEST" 1`] = `
<ins
  slot="TEST"
/>
`;

exports[`ins renders with spellCheck="false" 1`] = `
<ins
  spellCheck="false"
/>
`;

exports[`ins renders with spellCheck="true" 1`] = `
<ins
  spellCheck="true"
/>
`;

exports[`ins renders with style="[object Object]" 1`] = `
<ins
  style={
    Object {
      "color": "#000000",
    }
  }
/>
`;

exports[`ins renders with tabIndex="1" 1`] = `
<ins
  tabIndex={1}
/>
`;

exports[`ins renders with title="TEST" 1`] = `
<ins
  title="TEST"
/>
`;

exports[`ins renders with translate="no" 1`] = `
<ins
  translate="no"
/>
`;

exports[`ins renders with translate="yes" 1`] = `
<ins
  translate="yes"
/>
`;

exports[`ins renders without attributes 1`] = `<ins />`;
